k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "10"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"ai-backend","namespace":"default"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"ai-backend"}},"strategy":{"type":"RollingUpdate"},"template":{"metadata":{"labels":{"app":"ai-backend"}},"spec":{"containers":[{"env":[{"name":"OLLAMA_HOST","value":"http://host.docker.internal:11434"}],"image":"ai-assistant-backend:v2","imagePullPolicy":"Never","name":"ai-backend","ports":[{"containerPort":8000}]}]}}}}
  name: ai-backend
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ai-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ai-backend
    spec:
      containers:
      - env:
        - name: OLLAMA_HOST
          value: http://host.docker.internal:11434
        image: asthagupta0309/ai-assistant-backend:88ebf4a
        imagePullPolicy: Always
        name: ai-backend
        ports:
        - containerPort: 8000
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
