k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "18"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"ai-frontend","namespace":"default"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"ai-frontend"}},"strategy":{"type":"RollingUpdate"},"template":{"metadata":{"labels":{"app":"ai-frontend"}},"spec":{"containers":[{"image":"asthagupta0309/ai-k8s-frontend:latest","imagePullPolicy":"Always","name":"ai-frontend","ports":[{"containerPort":5173}]}]}}}}
  name: ai-frontend
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ai-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-06-15T01:54:09+05:30"
      labels:
        app: ai-frontend
    spec:
      containers:
      - image: asthagupta0309/ai-assistant-frontend:88ebf4a
        imagePullPolicy: Always
        name: ai-frontend
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
