k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-backend-service
  labels:
    app: ai-backend

spec:
  selector:
    app: ai-backend

  ports:
    - name: http
      port: 8000
      targetPort: 8000

  type: NodePort
