k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"ai-assistant-ingress","namespace":"default"},"spec":{"ingressClassName":"nginx","rules":[{"host":"ai.local","http":{"paths":[{"backend":{"service":{"name":"ai-frontend-service","port":{"number":80}}},"path":"/","pathType":"Prefix"},{"backend":{"service":{"name":"ai-backend-service","port":{"number":8000}}},"path":"/analyze","pathType":"Prefix"},{"backend":{"service":{"name":"ai-backend-service","port [...]
  name: ai-assistant-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: ai.local
    http:
      paths:
      - backend:
          service:
            name: ai-frontend-service
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: ai-backend-service
            port:
              number: 8000
        path: /analyze
        pathType: Prefix
      - backend:
          service:
            name: ai-backend-service
            port:
              number: 8000
        path: /metrics
        pathType: Prefix
  tls:
  - hosts:
    - ai.local
    secretName: ai-local-tls
